--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -33,8 +33,8 @@
     <bool name="config_disableHomeUnlockSetting">false</bool>
 
     <!-- Workaround for devices with broken keyboards -->
-    <add-resource type="bool" name="config_forceDisableHardwareKeyboard"></add-resource>
-    <bool name="config_forceDisableHardwareKeyboard">true</bool>
+    <!-- <add-resource type="bool" name="config_forceDisableHardwareKeyboard"></add-resource>
+    <bool name="config_forceDisableHardwareKeyboard">true</bool> -->
 
     <!-- Hardware 'face' keys present on the device, stored as a bit field.
          This integer should equal the sum of the corresponding value for each
