--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -62,5 +62,10 @@
     <!-- Device supports LED flashlight -->
     <add-resource type="bool" name="config_enableTorch"></add-resource>
     <bool name="config_enableTorch">false</bool>
+	
+	<!--  Maximum number of supported users -->
+    <integer name="config_multiuserMaximumUsers">4</integer>
+    <!--  Whether Multiuser UI should be shown -->
+    <bool name="config_enableMultiUserUI">true</bool>
 
 </resources>
