Switch to camera wrapper and proprietary camera

--- a/overlay/packages/apps/Camera2/res/values/config.xml
+++ b/overlay/packages/apps/Camera2/res/values/config.xml
@@ -17,6 +17,17 @@
 <!-- Camera app resources that may need to be customized
      for different hardware or product builds. -->
 <resources>
-    <!-- Samsung Camcorder Mode -->
-    <!-- <bool name="needsSamsungCamMode">true</bool> -->
+<!-- Allows setting video size before recording starts -->
+<bool name="needsEarlyVideoSize">true</bool>
+<!-- Force use of profile video size -->
+<bool name="useProfileVideoSize">true</bool>
+<!-- Samsung Camcorder Mode -->
+<bool name="needsSamsungCamMode">true</bool>
+<!-- Use ZSL mode -->
+<bool name="enableZSL">false</bool>
+<!-- Magic for enabling ZSL on Samsung cameras -->
+<bool name="sendMagicSamsungZSLCommand">false</bool>
+<!-- The camera removes the focus modes by default when touch-to-focus
+exists. Use this option to change that behavior -->
+<bool name="wantsFocusModes">true</bool>
 </resources>
