--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -44,9 +44,11 @@
              4 - Menu
              8 - Assistant (search)
             16 - App switch
+            32 - Camera
+            64 - Volume rocker
          For example, a device with Home, Back and Menu keys would set this
          config to 7. -->
-    <integer name="config_deviceHardwareKeys">7</integer>
+    <integer name="config_deviceHardwareKeys">71</integer>
 
     <!-- True if the Irda service should be started at system start -->
     <!-- <bool name="config_enableIrdaManagerService">true</bool> -->
@@ -62,10 +64,12 @@
     <!-- Device supports LED flashlight -->
     <add-resource type="bool" name="config_enableTorch"></add-resource>
     <bool name="config_enableTorch">false</bool>
-	
-	<!--  Maximum number of supported users -->
+
+    <!--  Maximum number of supported users -->
     <integer name="config_multiuserMaximumUsers">4</integer>
     <!--  Whether Multiuser UI should be shown -->
     <bool name="config_enableMultiUserUI">true</bool>
 
+    <!-- Workaround for devices with broken keyboards -->
+    <bool name="config_forceDisableHardwareKeyboard">true</bool>
 </resources>
